syntax = "proto3";

import "google/protobuf/empty.proto";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (google.protobuf.Empty);
  rpc FindUserById(FindUserByIdRequest) returns (FindUserByIdResponse);
  rpc FindUserByName(FindUserByNameRequest) returns (FindUserByNameResponse);
  rpc DeleteUserById(DeleteUserByIdRequest) returns (google.protobuf.Empty);
}

message CreateUserRequest {
  string name = 1;
  string password = 2;
}

message FindUserByIdRequest {
  string id = 1;
}

message FindUserByIdResponse {
  string id = 1;
  string name = 2;
}

message FindUserByNameRequest {
  string name = 1;
}

message FindUserByNameResponse {
  string id = 1;
  string name = 2;
}

message DeleteUserByIdRequest {
  string id = 1;
}
